# Atom

./: .gitignore  CMakeLists.txt  README.md  build.sh  main.cpp  run.sh
assets/components/: ElectronParticle.h  NeutronParticle.h  ParticleComponent.cpp  ParticleComponent.h  ProtonParticle.h
assets/scenes/: ExampleScene.h
engine/components/: CameraComponent.cpp  CameraComponent.h  Component.h  MeshComponent.cpp  MeshComponent.h
engine/core/: Application.cpp  Application.h  GameObject.h  Lifecycle.h  Transform.h
engine/mesh/: CubeMesh.h  Mesh.h  ObjMesh.h  SphereMesh.h
engine/physics/: PhysicsConstants.h
engine/rendering/: Renderer.cpp  Renderer.h  ShaderUtils.h
engine/rendering/shaders/: basic.frag  basic.vert
engine/scene/: Scene.h  SceneManager.cpp  SceneManager.h
include/: Application.h  Constants.h  Entity.h  MeshEntity.h  ShaderUtils.h
include/camera/: Camera.h
include/engine/: Lifecycle.h
include/engine/components/: CameraComponent.h  Component.h  ElectronParticle.h  MeshComponent.h  NeutronParticle.h  ParticleComponent.h  ProtonParticle.h
include/engine/mesh/: CubeMesh.h  Mesh.h  ObjMesh.h  SphereMesh.h
include/engine/object/: GameObject.h  Transform.h
include/engine/scene/: Scene.h  SceneManager.h
include/glad/: glad.h
include/scenes/: ExampleScene.h
include/shapes/: Cube.h  Plane.h  ShapeType.h  Sphere.h
shaders/: basic.frag  basic.vert  cube.frag
src/: Application.cpp  Entity.cpp  MeshEntity.cpp  glad.c  main.cpp
src/camera/: Camera.cpp
src/engine/components/: CameraComponent.cpp  MeshComponent.cpp  ParticleComponent.cpp
src/engine/scene/: SceneManager.cpp
src/shapes/: Cube.cpp  Plane.cpp  Sphere.cpp
